--- a/front-end/html/home.html
+++ b/front-end/html/home.html
@@ -4,26 +4,26 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="../images/logo.png">
-	<title> CARVAN test</title>
+	<title> CARVAN</title>
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/home.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+	
 		<header id="header" class="container-fluid">
 			<div class="container">
 				<div class="row">   
 					<div class="navbar navbar-expand-lg navbar-light">
-	        			<div class="col-lg-3.5 col-md-3">
+	        			<div class="col-lg-3 col-md-3">
 
 							  <a class="navbar-brand" href="#"><img src="http://ak2.imgaft.com/images/new_logo_GDTrans.png"/></a>
-
 							  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							    <span class="navbar-toggler-icon"></span>
 							  </button>
 						</div>
 
-						<div id="navbarSupportedContent"  class="collapse navbar-collapse col-lg-8.5 col-md-9">
+						<div id="navbarSupportedContent"  class="collapse navbar-collapse col-lg-9 col-md-9">
 						    <ul class="navbar-nav mr-auto">
 						      <li class="nav-item active ">
 						        <a class="nav-link" href="#">About Us <span class="sr-only">(current)</span></a>
@@ -179,7 +179,7 @@
 	</footer> 
 
 	<script src="../js/jquery-3.2.1.min.js"></script>
-	<script src="../js/popper.min.js"></script>
+	<script src="../js/popper.js"></script>
 	<script src="../js/bootstrap.min.js"></script>
 	<script src="../js/home.js"></script>
 
