homepage làm lại, thêm dmsanpham, bh chỉ buil mấy cái linh tinh khác là xong, e làm đc. a reponsive ok rồi nhé

--- a/front-end/html/home1.html
+++ b/front-end/html/home1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<link rel="icon" href="../images/logo.png">
 	<title> CARVAN</title>
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
@@ -45,29 +45,30 @@
 			</div>
 		</div>
 	</header>
+	
 	<section id="section">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-7 col-md-12 col-sm-12">
 					<div class="banner-t col-lg-12 col-md-12 col-sm-12">
-						<a href="#"><img src="http://thegioioto.com.vn/media/catalog/product/cache/1/image/653x472/8ac3afd877975ceb381484c478f66501/c/c/cclass-1_1.jpg"></a>
+						<a href="#"><img class="img-fluid" src="http://thegioioto.com.vn/media/catalog/product/cache/1/image/653x472/8ac3afd877975ceb381484c478f66501/c/c/cclass-1_1.jpg"></a>
 					</div>
 
-					<div class="text-banner col-lg-12 col-md-11 col-sm-11 col-12">
+					<div class="text-banner col-lg-12 col-md-11 col-sm-11 col-10">
 						<div class="text-banner-t ">
 							<span><i class="fa fa-cart-plus" aria-hidden="true"></i> Xe Mới</span>
-							<span><i class="fa fa-cart-plus" aria-hidden="true"></i> Xe Mới</span>
+							<span><i class="fa fa-cart-plus " aria-hidden="true"></i> Xe Mới</span>
 						</div>
-						<div class="text-banner-bt">
-							<span class="price ">200000 USD</span>
-							<span class="product-name "><a href="#">Mercedes C2000</a></span>
+						<div class="text-banner-bt col-12">
+							<span class="price col-12">200000 USD</span>
+							<span class="product-name col-12"><a href="#">Mercedes C2000</a></span>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-5 col-md-12 col-sm-12">
 					<div id="search-car" class="row col-lg-12 col-md-12 col-sm-12">
-						<div id="banner-r" class="row col-lg-12 col-12">
-							<img src="http://thegioioto.com.vn/skin/frontend/nodo/default/images/ads-tim-xe.png">
+						<div id="banner-r" class=" text-search1 row col-lg-12 col-12">
+							<h3><a href="#"><img class="img-fluid" src="http://thegioioto.com.vn/skin/frontend/nodo/default/images/ads-tim-xe.png"></a></h3>
 						</div>
 						<div id="search" class="row col-lg-12">
 							<div class="text-search col-lg-12 col-md-12">
@@ -94,7 +95,7 @@
 							<input class="col-lg-12" type="button" name="search-car" value="Search..">
 						</div>
 						<div class="text-search1 row col-lg-12 col-md-12 col-sm-12">
-							<h3><a href="#"><img src="https://img1.banxehoi.com/Static/Images/hotrotragop.png"></a></h3>
+							<h3 class="text-center" ><a href="#"><img src="https://img1.banxehoi.com/Static/Images/hotrotragop.png"></a></h3>
 						</div>
 					</div>
 				</div>
@@ -211,6 +212,7 @@
 			</div>
 		</div>
 	</section>
+
 	<footer >
 		<div class="container">
 			<div class="row">
